@@ -19,7 +19,6 @@ import gov.nysenate.ess.core.model.transaction.TransactionHistory;
 import gov.nysenate.ess.core.model.transaction.TransactionHistoryUpdateEvent;
 import gov.nysenate.ess.core.model.transaction.TransactionRecord;
 import gov.nysenate.ess.core.service.mail.SendMailService;
-import gov.nysenate.ess.core.service.pec.external.everfi.user.EverfiUser;
 import gov.nysenate.ess.core.service.pec.external.everfi.user.EverfiUserService;
 import gov.nysenate.ess.core.service.pec.notification.AssignmentWithTask;
 import gov.nysenate.ess.core.service.personnel.EmployeeInfoService;
@@ -30,9 +29,7 @@ import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 
-import javax.mail.internet.MimeMessage;
 import java.time.LocalDate;
-import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Set;
@@ -144,6 +141,7 @@ public class EssPersonnelTaskAssigner implements PersonnelTaskAssigner {
                     if (assignment.getTaskId() == task.getTaskId() && assignment.isCompleted()
                             && task.getTaskType() == PersonnelTaskType.ETHICS_LIVE_COURSE) {
                         hasCompletedAnEthicsLiveTraining = true;
+                        break;
                     }
                 }
             }
@@ -176,8 +174,7 @@ public class EssPersonnelTaskAssigner implements PersonnelTaskAssigner {
         PersonnelTask task = personnelTaskDao.getPersonnelTask(taskID);
         if (task.getTaskType() == PersonnelTaskType.EVERFI_COURSE) {
             checkEverfiRecords(taskID, empID);
-        }
-        else if (task.getTaskType() == PersonnelTaskType.KNOWBE4_COURSE) {
+        } else if (task.getTaskType() == PersonnelTaskType.KNOWBE4_COURSE) {
             reportKnowBe4MaunalAssignment(taskID, empID);
         }
         personnelTaskDao.insertPersonnelAssignedTask(empID, updateEmpID, taskID);
@@ -199,7 +196,7 @@ public class EssPersonnelTaskAssigner implements PersonnelTaskAssigner {
         //check if they exist in Everfi.
         else if (everfiUserIDs == null) {
             logger.info("Employee: " + employee.getEmail() + " has an email but has not been uploaded to Everfi");
-            everfiUserService.addEmployeesToEverfi(Arrays.asList(employee));
+            everfiUserService.addEmployeesToEverfi(List.of(employee));
             sendEmailToEverfiReportEmails(subject, "ESS has attempted to create an Everfi account for " + employee.getFullName() + ". The account will be under the email " + employee.getEmail());
         }
         //else they are registered but not assigned. send report to have that manually changed
@@ -220,72 +217,72 @@ public class EssPersonnelTaskAssigner implements PersonnelTaskAssigner {
     }
 
 
-private void sendEmailToEverfiReportEmails(String subject, String html) {
-    for (String email : this.everfiReportEmails) {
-        sendEmail(email, subject, html);
-    }
-}
-
-private void sendEmail(String to, String subject, String html) {
-    try {
-        sendMailService.sendMessage(StringUtils.trim(to), subject, html);
-    } catch (Exception e) {
-        logger.error("There was an error trying to send the Everfi report email ", e.getMessage());
-    }
-}
-
-private String generateEmployeeListString(List<Employee> emps) {
-    StringBuilder employeeListDetails = new StringBuilder();
-    for (Employee employee : emps) {
-        employeeListDetails.append(" NAME: ").append(employee.getFullName())
-                .append(" EMAIL: ").append(employee.getEmail()).append(" EMPID: ")
-                .append(employee.getEmployeeId()).append("<br>\n");
-    }
-
-    if (employeeListDetails.isEmpty()) {
-        employeeListDetails = new StringBuilder("There are no employees to perform this operation on");
-    }
-    return employeeListDetails.toString();
-}
-
-private PersonnelTaskType getPersonnelTaskType(PersonnelTaskAssignment assignment, List<PersonnelTask> personnelTasks) {
-    PersonnelTaskType type = null;
-    for (PersonnelTask task : personnelTasks) {
-        if (assignment.getTaskId() == task.getTaskId() && task.getTaskType() == PersonnelTaskType.MOODLE_COURSE) {
-            type = PersonnelTaskType.MOODLE_COURSE;
-        } else if (assignment.getTaskId() == task.getTaskId() && task.getTaskType() == PersonnelTaskType.ETHICS_LIVE_COURSE) {
-            type = PersonnelTaskType.ETHICS_LIVE_COURSE;
+    private void sendEmailToEverfiReportEmails(String subject, String html) {
+        for (String email : this.everfiReportEmails) {
+            sendEmail(email, subject, html);
         }
     }
-    return type;
-}
 
-/**
- * Detect transaction posts for new or reappointed employees and assign tasks to the employees.
- *
- * @param txUpdateEvent {@link TransactionHistoryUpdateEvent}
- */
-@Subscribe
-public void assignTasksToNewEmps(TransactionHistoryUpdateEvent txUpdateEvent) {
-    txUpdateEvent.getTransRecs().stream()
-            .filter(rec -> newEmpCodes.contains(rec.getTransCode()))
-            .map(TransactionRecord::getEmployeeId)
-            .distinct()
-            .forEach(empId -> assignTasks(empId, true));
-}
-
-/* --- Internal Methods --- */
-
-/**
- * Determine if the employee is eligible for task assignment.
- */
-private boolean needsTaskAssignment(int empId) {
-    if (empInfoService.getEmployee(empId).isSenator()) {
-        return false;
+    private void sendEmail(String to, String subject, String html) {
+        try {
+            sendMailService.sendMessage(StringUtils.trim(to), subject, html);
+        } catch (Exception e) {
+            logger.error("There was an error trying to send the Everfi report email ", e.getMessage());
+        }
     }
-    TransactionHistory transHistory = transactionService.getTransHistory(empId);
-    Range<LocalDate> presentAndFuture = Range.atLeast(LocalDate.now());
-    // They are eligible if they are currently active, or will be active in the future.
-    return transHistory.getActiveDates().intersects(presentAndFuture);
-}
+
+    private String generateEmployeeListString(List<Employee> emps) {
+        StringBuilder employeeListDetails = new StringBuilder();
+        for (Employee employee : emps) {
+            employeeListDetails.append(" NAME: ").append(employee.getFullName())
+                    .append(" EMAIL: ").append(employee.getEmail()).append(" EMPID: ")
+                    .append(employee.getEmployeeId()).append("<br>\n");
+        }
+
+        if (employeeListDetails.isEmpty()) {
+            employeeListDetails = new StringBuilder("There are no employees to perform this operation on");
+        }
+        return employeeListDetails.toString();
+    }
+
+    private PersonnelTaskType getPersonnelTaskType(PersonnelTaskAssignment assignment, List<PersonnelTask> personnelTasks) {
+        PersonnelTaskType type = null;
+        for (PersonnelTask task : personnelTasks) {
+            if (assignment.getTaskId() == task.getTaskId() && task.getTaskType() == PersonnelTaskType.MOODLE_COURSE) {
+                type = PersonnelTaskType.MOODLE_COURSE;
+            } else if (assignment.getTaskId() == task.getTaskId() && task.getTaskType() == PersonnelTaskType.ETHICS_LIVE_COURSE) {
+                type = PersonnelTaskType.ETHICS_LIVE_COURSE;
+            }
+        }
+        return type;
+    }
+
+    /**
+     * Detect transaction posts for new or reappointed employees and assign tasks to the employees.
+     *
+     * @param txUpdateEvent {@link TransactionHistoryUpdateEvent}
+     */
+    @Subscribe
+    public void assignTasksToNewEmps(TransactionHistoryUpdateEvent txUpdateEvent) {
+        txUpdateEvent.getTransRecs().stream()
+                .filter(rec -> newEmpCodes.contains(rec.getTransCode()))
+                .map(TransactionRecord::getEmployeeId)
+                .distinct()
+                .forEach(empId -> assignTasks(empId, true));
+    }
+
+    /* --- Internal Methods --- */
+
+    /**
+     * Determine if the employee is eligible for task assignment.
+     */
+    private boolean needsTaskAssignment(int empId) {
+        if (empInfoService.getEmployee(empId).isSenator()) {
+            return false;
+        }
+        TransactionHistory transHistory = transactionService.getTransHistory(empId);
+        Range<LocalDate> presentAndFuture = Range.atLeast(LocalDate.now());
+        // They are eligible if they are currently active, or will be active in the future.
+        return transHistory.getActiveDates().intersects(presentAndFuture);
+    }
 }
